--- a/output/manuscript.html
+++ b/output/manuscript.html
@@ -14,9 +14,9 @@
   <meta name="author" content="James Cox" />
   <meta name="author" content="Bei Wang" />
   <meta name="author" content="Jared Rutter" />
-  <meta name="dcterms.date" content="2020-02-14" />
+  <meta name="dcterms.date" content="2020-03-03" />
   <meta name="keywords" content="metabolomics, metabolism, network, omics, rna-seq, proteomics, gene, protein, metabolite, context" />
-  <title>Gazing into the Metaboverse: Automation, exploration, and contextualization of metabolic data</title>
+  <title>Gazing into the Metaboverse: Automated exploration and contextualization of metabolic data</title>
   <style>
     code{white-space: pre-wrap;}
     span.smallcaps{font-variant: small-caps;}
@@ -33,12 +33,12 @@
   Suggest improvements at https://github.com/manubot/manubot/blob/master/manubot/process/header-includes-template.html
   -->
   <meta name="dc.format" content="text/html" />
-  <meta name="dc.title" content="Gazing into the Metaboverse: Automation, exploration, and contextualization of metabolic data" />
-  <meta name="citation_title" content="Gazing into the Metaboverse: Automation, exploration, and contextualization of metabolic data" />
-  <meta property="og:title" content="Gazing into the Metaboverse: Automation, exploration, and contextualization of metabolic data" />
-  <meta property="twitter:title" content="Gazing into the Metaboverse: Automation, exploration, and contextualization of metabolic data" />
-  <meta name="dc.date" content="2020-02-14" />
-  <meta name="citation_publication_date" content="2020-02-14" />
+  <meta name="dc.title" content="Gazing into the Metaboverse: Automated exploration and contextualization of metabolic data" />
+  <meta name="citation_title" content="Gazing into the Metaboverse: Automated exploration and contextualization of metabolic data" />
+  <meta property="og:title" content="Gazing into the Metaboverse: Automated exploration and contextualization of metabolic data" />
+  <meta property="twitter:title" content="Gazing into the Metaboverse: Automated exploration and contextualization of metabolic data" />
+  <meta name="dc.date" content="2020-03-03" />
+  <meta name="citation_publication_date" content="2020-03-03" />
   <meta name="dc.language" content="en-US" />
   <meta name="citation_language" content="en-US" />
   <meta name="dc.relation.ispartof" content="Manubot" />
@@ -89,12 +89,12 @@
 </head>
 <body>
 <header id="title-block-header">
-<h1 class="title">Gazing into the Metaboverse: Automation, exploration, and contextualization of metabolic data</h1>
+<h1 class="title">Gazing into the Metaboverse: Automated exploration and contextualization of metabolic data</h1>
 </header>
 <p><small><em>
 This manuscript
 was automatically generated
-on February 14, 2020.
+on March 3, 2020.
 </em></small></p>
 <h2 id="authors">Authors</h2>
 <p><a href="https://orcid.org/0000-0002-5096-0558"><img src="images/orcid.svg" width="11" height="11" alt="ORCID icon" /></a>
@@ -143,10 +143,47 @@ Illustration comparing traditional metabolic data analysis methods and the holis
 <p>In order to provide a platform for the exploration of single or multi-omic metabolic data, we developed several new computational features to aid in the aims discussed above. First, we developed a pattern search engine for the rapid and automated identification of patterns and trends in -omic data on the metabolic network. Conceptually, this search engine borrows principles of topological motif searching from graph theory. In the computational science context, a motif is simply a reoccuring pattern in network structure, or the organization of network entities and their relationships to one another. However, with -omic data, we are more interested in identifying patterns in expression or abundance of genes, proteins, and metabolites. We therefore adapted this methodology to search the global metabolic patterns for interesting patterns in the network. For example, at a reaction the input may be high and the output low, indicating some sort of regulatory event occuring in the model. <i>Metaboverse</i> will search the global network from a predefined library of regulatory patterns and return an ordered graphical table of conserved patterns. Users will also be able to design their own patterns through an interactive pattern drawing tool, and even design specific scenarios that are cognizant of feature type. For example, one might be interested in a pattern where a protein displays higher expression, but the resulting metabolite is decreased. The user can also define multi-step patterns that may occur over two or more reactions.</p>
 <p>Another feature introduced in <i>Metaboverse</i> allows for the interactive exploration of specific reactions or reaction entities with on-the-fly pattern search analysis. Users can explore specific pathways of interest and look for other interesting patterns and trends in pathways of interest. Users can also select a specific metabolite, protein, complex, or gene and explore patterns across pathways in a feature neighborhood search. For example, a user might identify a change in one metabolite in a particular pathway and want to explore what distal effects this change has in other pathways that use this metabolite. This functionality moves the analysis away from our traditional, strictly defined pathway approach to analysis, and helps contextualize the far-reaching effects changes in metabolism can have across the classical pathways in metabolism.</p>
 <p>One challenge in metabolomics data analysis in sparsity of data points. While thousands of metabolites exist in human metabolism, the current state of the technology for determining which mass spectra belong to which metabolite can be challenging and often results in a limited number of data points being quantified. These can lead to gaps in the metabolic network which can be challenging to explore and analyze. We therefore introduce a reaction collapse feature that allows for summary of reactions in pathways for which data is missing. This methodology can use RNA-seq data to inform prioritization of particular paths. For example, one metabolite may be converted to a downstream product in two different manners, but by using the gene expression data from a model, one can determine that one path is active while the other in inactive.</p>
-<p><i>Metaboverse</i> is designed to handle standard two-condition experiments, flux metabolomics, and time-course experiments. Time-course inputs can be single-omics, or static RNA-seq and/or proteomics with multiple time-point metabolomics. Users input fold change and statistical measures from their respective -omics, and <i>Metaboverse</i> reconciles the inputs for layering on the metabolic network. <i>Metaboverse</i> can handle data from a variety of model organisms. The foundational curation of <i>Metaboverse</i> is built on the Reactome curations of metabolism, so any of the 90+ species available on that platform are also available within the <i>Metaboverse</i> environment. In order to validate these methodologies available in <i>Metaboverse</i> we analyzed two-condition, flux metabolomics, and time-course datasets and provide vignettes that highlight <i>Metaboverse’s</i> reliability in extracting canonical features, as well as novel features and patterns, from well-defined biological models. We outline the technical specs for computational biologists in the methods section, and the biological utilities in the main text for wet bench biologists. We intend that <i>Metaboverse</i> will be foundational in our ability to more deeply and holistically explore metabolism and aid in our ability to provide more context within metabolic models.</p>
+<p><i>Metaboverse</i> is designed to handle standard two-condition experiments, flux metabolomics, and time-course experiments. Time-course inputs can be single-omics, or static RNA-seq and/or proteomics with multiple time-point metabolomics. Users input fold change and statistical measures from their respective -omics, and <i>Metaboverse</i> reconciles the inputs for layering on the metabolic network. <i>Metaboverse</i> can handle data from a variety of model organisms, including humans, mouse, yeast, zebrafish, and more. The foundational curation of <i>Metaboverse</i> is built on the Reactome curations of metabolism, so any of the 90+ species available on that platform are also available within the <i>Metaboverse</i> environment. In order to validate these methodologies available in <i>Metaboverse</i> we analyzed two-condition, flux metabolomics, and time-course datasets and provide vignettes that highlight <i>Metaboverse’s</i> reliability in extracting canonical features, as well as novel features and patterns, from well-defined biological models. We outline the technical specs for computational biologists in the methods section, and the biological utilities in the main text for wet bench biologists. We intend that <i>Metaboverse</i> will be foundational in our ability to more deeply and holistically explore metabolism and aid in our ability to provide more context within metabolic models.</p>
 <h2 id="results">Results</h2>
+<h3 id="metaboverse-is-a-dynamic-user-friendly-tool-for-the-exploration-of-high-throughput-biological-data-in-organism-specific-pathways">Metaboverse is a dynamic, user-friendly tool for the exploration of high-throughput biological data in organism-specific pathways</h3>
+<p>Figure 2. Overview</p>
+<h3 id="data-vignettes">Data vignettes</h3>
+<p>What does Metaboverse help find or speed up compared to standard analysis?<br />
+i.e. Volcano plot vs motif search</p>
+<h5 id="static-ian">1. Static (Ian)</h5>
+<p>Figure 3. Data<br />
+Supp Table 1. Motif results</p>
+<h5 id="time-course-yeyun">2. Time-course (Yeyun)</h5>
+<p>Figure 4. Data<br />
+Supp Table 2. Motif results</p>
+<h5 id="flux-data-cameron">3. Flux data (Cameron)</h5>
+<p>Figure 5. Data<br />
+Supp Table 3. Motif results</p>
+<h3 id="performance">Performance</h3>
+<p>Table 1. Performance break-down<br />
+Table 2. Comparison to existing tools</p>
 <h2 id="discussion">Discussion</h2>
+<p>We hope that this tool will bring a new perspective to users’ data and help draw the connections needed to aid them in extracting new and exciting hypotheses from their data that would be difficult to do without this tool.</p>
 <h2 id="methods">Methods</h2>
+<h3 id="network-curation">1. Network Curation</h3>
+<h3 id="data-overlay-and-broadcasting-for-missing-entities">2. Data overlay and broadcasting for missing entities</h3>
+<h3 id="collapsing-reactions-with-missing-expression-or-abundance-user-data">3. Collapsing reactions with missing expression or abundance user data</h3>
+<h3 id="regulatory-pattern-motif-searches">4. Regulatory pattern (motif) searches</h3>
+<h3 id="nearest-neighborhood-searches">5. Nearest neighborhood searches</h3>
+<h3 id="network-visualization-and-exploration">6. Network visualization and exploration</h3>
+<h5 id="visualizing-pathways-and-super-pathways">6.1 Visualizing pathways and super-pathways</h5>
+<h5 id="visualizing-compartments">6.2 Visualizing compartments</h5>
+<h5 id="data-scaling-and-interpretation">6.3 Data scaling and interpretation</h5>
+<h5 id="dynamic-network-plotting">6.4 Dynamic network plotting</h5>
+<h5 id="annotation">6.5 Annotation</h5>
+<h5 id="additional-features">6.6 Additional features</h5>
+<h3 id="packaging">7. Packaging</h3>
+<h5 id="framework">7.1 Framework</h5>
+<h5 id="documentation-and-test-cases">7.2 Documentation and Test Cases</h5>
+<h3 id="validation-using-biological-data">8. Validation using biological data</h3>
+<h5 id="curation-of-existing-datasets">8.1 Curation of existing datasets</h5>
+<h5 id="new-datasets">8.2 New datasets</h5>
+<h5 id="analysis-and-data-visualization">8.3 Analysis and data visualization</h5>
 <h2 id="acknowledgements">Acknowledgements</h2>
 <h2 id="contributions">Contributions</h2>
 <ul>
