--- a/webpage/v/local/index.html
+++ b/webpage/v/local/index.html
@@ -7,7 +7,6 @@
   <meta name="author" content="Jordan A. Berg" />
   <meta name="author" content="Youjia Zhou" />
   <meta name="author" content="T. Cameron Waller" />
-  <meta name="author" content="Alex J. Bott" />
   <meta name="author" content="Yeyun Ouyang" />
   <meta name="author" content="Ian George" />
   <meta name="author" content="Tyler Van Ry" />
@@ -56,9 +55,6 @@
   <meta name="citation_author_institution" content="Department of Biochemistry, University of Utah" />
   <meta name="citation_author_institution" content="Division of Medical Genetics, Department of Medicine, School of Medicine, University of California San Diego" />
   <meta name="citation_author_orcid" content="0000-0002-0313-6646" />
-  <meta name="citation_author" content="Alex J. Bott" />
-  <meta name="citation_author_institution" content="Department of Biochemistry, University of Utah" />
-  <meta name="citation_author_orcid" content="0000-0003-2273-8922" />
   <meta name="citation_author" content="Yeyun Ouyang" />
   <meta name="citation_author_institution" content="Department of Biochemistry, University of Utah" />
   <meta name="citation_author_orcid" content="0000-0001-9523-1044" />
@@ -103,8 +99,6 @@ Jordan A. Berg<sup>1</sup>,
 Youjia Zhou<sup>2</sup>,
 <a href="https://orcid.org/0000-0002-0313-6646"><img src="images/orcid.svg" width="11" height="11" alt="ORCID icon" /></a>
 T. Cameron Waller<sup>1,3</sup>,
-<a href="https://orcid.org/0000-0003-2273-8922"><img src="images/orcid.svg" width="11" height="11" alt="ORCID icon" /></a>
-Alex J. Bott<sup>1</sup>,
 <a href="https://orcid.org/0000-0001-9523-1044"><img src="images/orcid.svg" width="11" height="11" alt="ORCID icon" /></a>
 Yeyun Ouyang<sup>1</sup>,
 <a href="https://orcid.org/XXXX-XXXX-XXXX-XXXX"><img src="images/orcid.svg" width="11" height="11" alt="ORCID icon" /></a>
@@ -190,16 +184,16 @@ Table 2. Comparison to existing tools</p>
 <li>Conceptualization: J.A.B., T.C.W., B.W., J.R.</li>
 <li>Supervision: J.A.B., B.W., J.R.</li>
 <li>Project Administration: J.A.B.</li>
-<li>Investigation: J.A.B., T.C.W., A.J.B., Y.O., T.V.</li>
-<li>Formal Analysis: J.A.B., A.J.B., Y.O., I.G.</li>
+<li>Investigation: J.A.B., T.C.W., Y.O., T.V.</li>
+<li>Formal Analysis: J.A.B., Y.O., I.G.</li>
 <li>Software: J.A.B., Y.Z.</li>
 <li>Methodology: J.A.B., Y.Z.</li>
-<li>Validation: J.A.B., T.C.W., A.J.B., Y.O., I.G.</li>
-<li>Data Curation: J.A.B., Y.Z., T.C.W., A.J.B., Y.O., T.V.</li>
+<li>Validation: J.A.B., T.C.W., Y.O., I.G.</li>
+<li>Data Curation: J.A.B., Y.Z., T.C.W., Y.O., T.V.</li>
 <li>Resources: J.A.B., J.C., B.W., J.R.</li>
 <li>Funding Acquisition: J.A.B., J.C., B.W., J.R.</li>
 <li>Writing - Original Draft Preparation: J.A.B.</li>
-<li>Writing - Review &amp; Editing: J.A.B., Y.Z., T.C.W., A.J.B., Y.O., T.V., J.C., B.W., J.R.</li>
+<li>Writing - Review &amp; Editing: J.A.B., Y.Z., T.C.W., Y.O., T.V., J.C., B.W., J.R.</li>
 <li>Visualization: J.A.B., Y.Z., Y.O., I.G.</li>
 </ul>
 <div id="fig:square-image" class="fignos">
