--- a/webpage/v/local/index.html
+++ b/webpage/v/local/index.html
@@ -164,10 +164,10 @@ Illustration comparing the data input, processing, and exploration steps of the 
 <p>Mitochondrial fatty acid synthesis (mtFAS) acts as an important metabolic pathway long known to function to produce lipoic acid, a critical cofactor for several metabolic enzymes. Recent work has begun to uncover additional, important roles for this pathway. For example, we now know that mtFAS can perform metabolic nutrient sensing roles to coordinate lipoic acid synthesis with tricarboxylic acid (TCA) cycle activity, assembly of oxidative phosphorylation complexes, and more <span class="citation" data-cites="E3d6CBaQ">[<a href="#ref-E3d6CBaQ" role="doc-biblioref">23</a>]</span>. Additionally, this pathway has received increased physiological focus with the discovery of patients with mutations in key mtFAS enzymes.</p>
 <p><i>MCAT</i>, or <i>mct1</i>in <i>Saccharomyces cerevisiae</i>, is an acyltransferase responsible for the transfer of a malonyl group from malonyl-CoA to <i>NDUFAB1</i>, the mitochondrial acyl carrier protein and a subunit of the NADH dehydrogenase complex [?]. By knocking out this gene, one can simulate the effects of a disruption in mtFAS.</p>
 <p>In order to probe the relationship between mtFAS and metabolic from a systematic perspective, we used a <i>mct1Δ</i> model in <i>Saccharomyces cerevisiae</i> to measure steady state proteomics and transcriptomics at 12 hours after a shift to a respiratory carbon source, as well as steady state metabolomics at 0, 15, 30, 60, and 180 minutes after this shift in carbon source. From our previous work in our model and analyses of the data, we expected to observe effects such as …____.</p>
-<ul>
-<li>Implications</li>
-<li>Planned experimental validation (after quarantine)</li>
-</ul>
+<p>By layering these data onto the metabolic network using <i>Metaboverse</i>, we observed …___.</p>
+<p>Interestingly, we also were able to observe …___.</p>
+<p>Based on these novel findings in this model, it is plausible that …___.</p>
+<p>In order to validate this finding, we …___ (in progress). We found that …___.</p>
 <h4 id="flux-data-in-progress">2. Flux data (in progress)</h4>
 <h4 id="previously-published-data-in-progress">3. Previously published data (in progress)</h4>
 <h2 id="discussion">Discussion</h2>
